# py_cicd

./: .gitignore  .pre-commit-config.yaml  .yapf-config  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  sonar-project.properties
.github/workflows/: deploy.yml  python-test.yml
analysis/: index.html
docs/: analysis.md  index.md  installation.md  notes.md  preprocessing.md
installation/: index.html
notes/: index.html
preprocessing/: index.html
search/: search_index.json
tests/analysis/: test_exploratory_analysis.py
tests/preprocessing/: test_data_utils.py
xyz/: __init__.py
xyz/analysis/: __init__.py  exploratory_analysis.py
xyz/data/: sample_data.csv
xyz/preprocessing/: __init__.py  data_utils.py
