[metadata]
name = xyz
version = 0.0.1
author = HHYU
author_email = hsinhaohh.yu@gmail.com
description = A minimal setup
long_description_content_type = text/markdown
long_description = file: README.md

[options]
include_package_data = True
packages = xyz
python_requires = >=3.6
install_requires =
    pandas
    numpy

# to install the following packages, pip install -e[dev]
[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-mock
    pytest-cov>=2.10.0
    pre-commit>=2.4.0
    setuptools
    wheel
    yapf
    mypy

[coverage:run]
# If this option is not set, Sonar can't find coverage
relative_files = True